# poke-adjective

./: README.md  pyproject.toml
poke_adjective/: manage.py
poke_adjective/pkadj/: apps.py  urls.py  views.py
poke_adjective/pkadj/templates/: index.html
poke_adjective/poke_adjective/: asgi.py  settings.py  urls.py  wsgi.py
