[tool.poetry]
name = "poke-adjective"
version = "0.1.0"
description = ""
authors = ["brunodantas <bruno.welldm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
django = "^5.0.6"
pokebase = "^1.4.1"
ruff = "^0.4.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
